--- a/src/App.css
+++ b/src/App.css
@@ -35,14 +35,16 @@ main {
 }
 
 section {
-  width: 80%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 50px;
 }
 
 h1 {
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 ul {
@@ -59,15 +61,16 @@ ul {
 }
 
 li {
-  padding: 8px;
-  margin-bottom: 4px;
+  padding: 12px 225px;
+  margin-bottom: 8px;
   border-radius: 8px;
   font-weight: bold;
   text-shadow: 0px 0px 2px #000000;
-
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
+  min-height: 60px;
 }
 
 button {
